# claw-agent

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml  readme_cn.md
claw_agent/: __init__.py  __main__.py  config.py
claw_agent/agents/: __init__.py  coordinator.py  sub_agent.py
claw_agent/core/: __init__.py  compact.py  engine.py  hooks.py  messages.py  permissions.py  prompts.py  provider.py  streaming_executor.py  tool.py
claw_agent/instructions/: __init__.py  clawmd.py  prompts.py
claw_agent/integrations/: __init__.py  mcp_client.py
claw_agent/memory/: __init__.py  compact.py  dream.py  memory.py  session_persistence.py  session_prompts.py
claw_agent/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py  presets.py  tokens.py
claw_agent/tools/: __init__.py  ask_user_tool.py  bash_tool.py  file_tools.py  glob_tool.py  grep_tool.py  mcp_resources.py  web_fetch_tool.py  web_search_tool.py
examples/: coordinator_example.py  custom_tool.py  mcp_example.py  memory_example.py  multi_provider.py  simple_agent.py
tests/: test_exa_backend.py
